# Kessai

./: .eslintrc.cjs  .gitignore  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  index.html  install.sh  llms.txt  package.json  playwright.config.ts  playwright.web-smoke.config.ts  pnpm-lock.yaml  sweep.py  sweep_orange.py  uninstall.sh  update.sh  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/kessai-core/: Cargo.toml
crates/kessai-mcp/: Cargo.toml
crates/kessai-web/: Cargo.toml
crates/kessai-web/src/: main.rs  routes.rs
crates/subby-mcp/: Cargo.toml
crates/subby-web/: Cargo.toml
docs/: BACKLOG.md  README.md  architecture.md  backend-api.md  competitive-analysis.md  troubleshooting.md
docs/architecture/: database-schema.md  overview.md  security.md  state-management.md
docs/epics/: README.md  epic-01-foundation.md  epic-02-subscription-crud.md  epic-03-dashboard.md  epic-04-calendar.md  epic-05-notifications.md  epic-06-data-management.md
docs/explanation/: architecture.md  concepts.md  security-and-privacy.md
docs/getting-started/: building-from-source.md  conventions.md  (+2 more)
e2e/: navigation.spec.ts  settings.spec.ts  subscriptions.spec.ts  web-smoke.spec.ts
scripts/: release-dry-run.js  run-web-smoke.js  sync-versions.js  test-installer.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
(+260 files in other folders)
