[package]
name = "kessai-web"
version = "0.2.0"
edition = "2021"
description = "Web server for Kessai - serves the UI and REST API"

[[bin]]
name = "kessai-web"
path = "src/main.rs"

[dependencies]
kessai-core = { path = "../kessai-core" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
image = "0.25"
base64 = "0.22"
